# ai-agents-quiz-jornada-de-dados

./: README.md  pyproject.toml  requirements.txt
src/ai_agents_quiz_jornada_de_dados/: api_huggingface.py  api_request_test.py  gardio.py
tests/: quiz_liama.py
