[project]
name = "ai-agents-quiz-jornada-de-dados"
version = "0.1.0"
description = ""
authors = [
    {name = "leovnoliveira",email = "consultoria1.ceo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-stack (>=0.1.7,<0.2.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "llama-models[torch] (>=0.1.5,<0.2.0)"
]

[tool.poetry]
packages = [{include = "ai_agents_quiz_jornada_de_dados", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
